[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "router-env-v1"
version = "2.0.0"
description = "A real-world OpenEnv environment for LLM Model Routing."
authors = [
    { name = "RouterEnv Team" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "openenv-core>=0.2.0",
    "openai>=1.14.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
server = "router_env.server:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.27"
]

[tool.setuptools]
packages = ["router_env"]
